# Decidian_lab

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
Document/: Artifact_Mode_Implementation_Report.md  DOCX_Parsing_Hardening_and_Second_Pass_LLM_Report.md  Decidian.txt  Decidian_Architecture_v2.md  Docling_Current_Implementation_Report.md  Gemini_Defence_Implementation_Report.md  PROJECT_GUIDE.md
src/decidian_docling/: __init__.py  artifacts.py  canonical.py  chunking.py  clean_chunking.py  cli.py  config.py  gemini_review.py  models.py  parity.py  parser.py  postprocess.py  profiles.py  semantic_integrity.py  ui.py  validation.py
tests/: fixture_factory.py  test_artifacts.py  test_canonical_pipeline.py  test_chunking.py  test_chunking_integrity.py  test_gemini_live.py  test_integration.py  test_parity.py  test_parser_helpers.py  test_profiles.py  test_semantic_integrity.py  test_ui.py  test_validation.py
